Bug 149205 - FILESAVE: PPTX: Incorrect background color after RT ( part 2 )
Summary: FILESAVE: PPTX: Incorrect background color after RT ( part 2 )
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-05-20 14:34 UTC by Xisco Faulí
Modified: 2022-05-27 08:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison before and after RT (200.46 KB, image/png)
2022-05-20 14:34 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-05-20 14:34:36 UTC
Created attachment 180257 [details]
Comparison before and after RT

This is a follow-up of bug 148929 and bug 148961

Steps to reproduce:
1. Open attachment 163693 [details] from bug 135232
2. Save it to PPTX
3. Reopen it

-> The color in the background has changed. See comparison

Reproduced in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: 22d7cbc0f0c50c59abca7ab5f7db46e4d0e5f86a
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-05-20 14:35:10 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2022-04-27 20:12:52 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2022-04-28 08:15:54 +0200
commit 30735bdb5a0a81619000fdd24b2d0fbf45687f01 (patch)
tree 43a99bea091701eee066d9f1410777671d3b3b9f
parent bd568b360450b348ff0e6813862a49892df81140 (diff)
sd theme: add PPTX import for shape fill color effects

Bisected with: bibisect-linux64-7.4

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2022-05-25 06:12:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4a54a24c207f3040390e2fefec41cbbf0edd5eca

tdf#149205 sd theme: fix PPTX export loosing dk1 and lt1 colors

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2022-05-27 08:44:57 UTC
Verified in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: a8df5c815c8b002b7083b8777e3dd8beac573bf3
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!