tdf#149205 sd theme: fix PPTX export loosing dk1 and lt1 colors

Document theme of Impress documents were exported to PPTX only
partially: dk1 and lt1 was hardcoded to the SYS_COLOR_SCHEMES define,
while the rest was written from master-slide-specific svx::Theme.

The benefit of this is that our theme is just a set of colors
(<a:srgbClr> markup in OOXML), while dk1 and lt1 is more dynamic by
default in PowerPoint (<a:sysClr> in OOXML). The downside is that this
way a custom dk1 and lt1 color was lost on export.

Fix the problem by switching to <a:srgbClr> markup even for dk1 and lt1:
not using the <a:sysClr> markup doesn't seem to be a problem in
practice, or at least much less problematic than rendering with bad
colors.

If there is a need, dedicated <a:sysClr> markup support can be still
added later by extending svx::ColorSet::maColors to not only store a
list of colors, but also some additional properties of those colors.

Change-Id: I26df3fd8c891c217df0d36382f6599805198f4bc